# ScoutGPT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  scratch.py
backend/src/: agent.py  api.py  config.py  models.py
backend/src/nodes/: __init__.py  aggregation.py  analysis.py  execute_tools.py  planning.py  query_understanding.py  react_agent.py  response_formatter.py
backend/src/tools/: __init__.py  product.py  search.py
